--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <ul>
         <li><a href="01 - JavaScript Drum Kit/index.html">JavaScript Drum Kit</a></li>
         <li><a href="02 - JS and CSS Clock\index.html">CSS + JS Clock</a></li>
-        <li>Playing with CSS Variables and JS</li>
+        <li><a href="03 - CSS Variables\index.html">Playing with CSS Variables and JS</a></li>
         <li>Array Cardio Day 1</li>
         <li>Flex Panels Image Gallery</li>
         <li>Ajax Type Ahead</li>
