--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             text-decoration-line: underline;
             text-decoration-style: wavy;
             text-decoration-color: #553b25;
+            text-underline-offset: 0.3em;
         }
 
 
@@ -58,7 +59,7 @@
         <li><a href="01 - JavaScript Drum Kit/index.html">JavaScript Drum Kit</a></li>
         <li><a href="02 - JS and CSS Clock\index.html">CSS + JS Clock</a></li>
         <li><a href="03 - CSS Variables\index.html">Playing with CSS Variables and JS</a></li>
-        <li>Array Cardio Day 1</li>
+        <li><a href="04 - Array Cardio Day 1\index.html">Array Cardio Day 1</a></li>
         <li>Flex Panels Image Gallery</li>
         <li>Ajax Type Ahead</li>
         <li>Array Cardio Day 2</li>
