--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="02 - JS and CSS Clock\index.html">CSS + JS Clock</a></li>
         <li><a href="03 - CSS Variables\index.html">Playing with CSS Variables and JS</a></li>
         <li><a href="04 - Array Cardio Day 1\index.html">Array Cardio Day 1</a></li>
-        <li>Flex Panels Image Gallery</li>
+        <li><a href="05 - Flex Panel Gallery\index.html">Flex Panels Image Gallery</a></li>
         <li>Ajax Type Ahead</li>
         <li>Array Cardio Day 2</li>
         <li>Fun with HTML5 Canvas</li>
