--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="03 - CSS Variables\index.html">Playing with CSS Variables and JS</a></li>
         <li><a href="04 - Array Cardio Day 1\index.html">Array Cardio Day 1</a></li>
         <li><a href="05 - Flex Panel Gallery\index.html">Flex Panels Image Gallery</a></li>
-        <li>Ajax Type Ahead</li>
+        <li><a href="06 - Type Ahead\index.html">Ajax Type Ahead</a></li>
         <li>Array Cardio Day 2</li>
         <li>Fun with HTML5 Canvas</li>
         <li>14 Must Know Dev Tools Tricks</li>
