--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a href="04 - Array Cardio Day 1\index.html">Array Cardio Day 1</a></li>
         <li><a href="05 - Flex Panel Gallery\index.html">Flex Panels Image Gallery</a></li>
         <li><a href="06 - Type Ahead\index.html">Ajax Type Ahead</a></li>
-        <li>Array Cardio Day 2</li>
+        <li><a href="07 - Array Cardio Day 2\index.html">Array Cardio Day 2</a></li>
         <li>Fun with HTML5 Canvas</li>
         <li>14 Must Know Dev Tools Tricks</li>
         <li>Hold Shift to Check Multiple Checkboxes</li>
